<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<!-- WARNING: Eclipse auto-generated file.
              Any modifications will be overwritten.
              To include a user specific buildfile here, simply create one in the same
              directory with the processing instruction <?eclipse.ant.import?>
              as the first entry and export the buildfile again. --><project basedir="." default="build" name="b7web_t11_react">
    <property environment="env"/>
    <property name="debuglevel" value="source,lines,vars"/>
    <property name="target" value="21"/>
    <property name="source" value="21"/>
    <path id="EAR Libraries.libraryclasspath"/>
    <path id="Web App Libraries.libraryclasspath">
        <fileset dir="WebContent/WEB-INF/lib">
            <include name="**/*.jar"/>
        </fileset>
    </path>
    <path id="Server Runtime [Apache Tomcat v11].libraryclasspath">
        <pathelement location="../../../tools/apache-tomcat-11.0.4 (Java 21)/lib/websocket-client-api.jar"/>
        <pathelement location="../../../tools/apache-tomcat-11.0.4 (Java 21)/lib/tomcat-i18n-ko.jar"/>
        <pathelement location="../../../tools/apache-tomcat-11.0.4 (Java 21)/lib/el-api.jar"/>
        <pathelement location="../../../tools/apache-tomcat-11.0.4 (Java 21)/lib/tomcat-i18n-es.jar"/>
        <pathelement location="../../../tools/apache-tomcat-11.0.4 (Java 21)/lib/tomcat-websocket.jar"/>
        <pathelement location="../../../tools/apache-tomcat-11.0.4 (Java 21)/lib/jasper.jar"/>
        <pathelement location="../../../tools/apache-tomcat-11.0.4 (Java 21)/lib/jasper-el.jar"/>
        <pathelement location="../../../tools/apache-tomcat-11.0.4 (Java 21)/lib/tomcat-util.jar"/>
        <pathelement location="../../../tools/apache-tomcat-11.0.4 (Java 21)/lib/tomcat-i18n-de.jar"/>
        <pathelement location="../../../tools/apache-tomcat-11.0.4 (Java 21)/lib/catalina-storeconfig.jar"/>
        <pathelement location="../../../tools/apache-tomcat-11.0.4 (Java 21)/lib/jsp-api.jar"/>
        <pathelement location="../../../tools/apache-tomcat-11.0.4 (Java 21)/lib/ecj-4.27.jar"/>
        <pathelement location="../../../tools/apache-tomcat-11.0.4 (Java 21)/lib/catalina-tribes.jar"/>
        <pathelement location="../../../tools/apache-tomcat-11.0.4 (Java 21)/lib/tomcat-i18n-cs.jar"/>
        <pathelement location="../../../tools/apache-tomcat-11.0.4 (Java 21)/lib/catalina.jar"/>
        <pathelement location="../../../tools/apache-tomcat-11.0.4 (Java 21)/lib/tomcat-jni.jar"/>
        <pathelement location="../../../tools/apache-tomcat-11.0.4 (Java 21)/lib/tomcat-i18n-pt-BR.jar"/>
        <pathelement location="../../../tools/apache-tomcat-11.0.4 (Java 21)/lib/catalina-ssi.jar"/>
        <pathelement location="../../../tools/apache-tomcat-11.0.4 (Java 21)/lib/websocket-api.jar"/>
        <pathelement location="../../../tools/apache-tomcat-11.0.4 (Java 21)/lib/tomcat-coyote.jar"/>
        <pathelement location="../../../tools/apache-tomcat-11.0.4 (Java 21)/lib/catalina-ha.jar"/>
        <pathelement location="../../../tools/apache-tomcat-11.0.4 (Java 21)/lib/tomcat-api.jar"/>
        <pathelement location="../../../tools/apache-tomcat-11.0.4 (Java 21)/lib/annotations-api.jar"/>
        <pathelement location="../../../tools/apache-tomcat-11.0.4 (Java 21)/lib/jaspic-api.jar"/>
        <pathelement location="../../../tools/apache-tomcat-11.0.4 (Java 21)/lib/tomcat-i18n-zh-CN.jar"/>
        <pathelement location="../../../tools/apache-tomcat-11.0.4 (Java 21)/lib/catalina-ant.jar"/>
        <pathelement location="../../../tools/apache-tomcat-11.0.4 (Java 21)/lib/servlet-api.jar"/>
        <pathelement location="../../../tools/apache-tomcat-11.0.4 (Java 21)/lib/tomcat-util-scan.jar"/>
        <pathelement location="../../../tools/apache-tomcat-11.0.4 (Java 21)/lib/tomcat-i18n-ja.jar"/>
        <pathelement location="../../../tools/apache-tomcat-11.0.4 (Java 21)/lib/tomcat-i18n-ru.jar"/>
        <pathelement location="../../../tools/apache-tomcat-11.0.4 (Java 21)/lib/jakartaee-migration-1.0.7-shaded.jar"/>
        <pathelement location="../../../tools/apache-tomcat-11.0.4 (Java 21)/lib/tomcat-jdbc.jar"/>
        <pathelement location="../../../tools/apache-tomcat-11.0.4 (Java 21)/lib/tomcat-i18n-fr.jar"/>
        <pathelement location="../../../tools/apache-tomcat-11.0.4 (Java 21)/lib/tomcat-dbcp.jar"/>
    </path>
    <path id="b7web_t11_react.classpath">
        <pathelement location="build/classes"/>
        <path refid="EAR Libraries.libraryclasspath"/>
        <path refid="Web App Libraries.libraryclasspath"/>
        <path refid="Server Runtime [Apache Tomcat v11].libraryclasspath"/>
    </path>
    <target name="init">
        <mkdir dir="build/classes"/>
        <copy includeemptydirs="false" todir="build/classes">
            <fileset dir="src">
                <exclude name="**/*.java"/>
            </fileset>
        </copy>
    </target>
    <target name="clean">
        <delete dir="build/classes"/>
    </target>
    <target depends="clean" name="cleanall"/>
    <target depends="build-subprojects,build-project" name="build"/>
    <target name="build-subprojects"/>
    <target depends="init" name="build-project">
        <echo message="${ant.project.name}: ${ant.file}"/>
        <javac debug="true" debuglevel="${debuglevel}" destdir="build/classes" includeantruntime="false" source="${source}" target="${target}">
            <src path="src"/>
            <classpath refid="b7web_t11_react.classpath"/>
            <compilerarg value="-proc:full"/>
        </javac>
    </target>
    <target description="Build all projects which reference this project. Useful to propagate changes." name="build-refprojects"/>
    <target name="war" depends="build">
        <war destfile="dist/b7web_t11_react.war" webxml="WebContent/WEB-INF/web.xml">
            <fileset dir="WebContent"/>
            <lib dir="WebContent/WEB-INF/lib"/>
            <classes dir="build/classes"/>
        </war>
    </target>
</project>
